<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app_name">Спутник. Умный дом</string>
    <string name="about_app_version">Версия %1$s</string>
    <string name="about_copyright">© %1$d ООО «Спутник»</string>
    <string name="about_desc">Владельцем исключительных прав на приложение «Спутник. Умный дом» является ООО «Спутник», резидент инновационного центра Сколково, осуществляющее предоставление простой неисключительной лицензии на использование приложения «Спутник. Умный дом».</string>
    <string name="about_partner">О партнере</string>
    <string name="about_security_rule">Правила защиты информации</string>
    <string name="about_title">О приложении</string>
    <string name="about_user_license">Условия лицензионного соглашения</string>
    <string name="accept_address_accept">Все верно, продолжить</string>
    <string name="accept_address_decline">Это не мой адрес</string>
    <string name="accept_address_title">Ваш адрес</string>
    <string name="access_archive_period_desc">Укажите, за какой период времени вы хотите получить видео:</string>
    <string name="access_denied">Недостаточно прав на скачивание</string>
    <string name="account_bill">Лицевой счет:</string>
    <string name="account_bill_title">Лицевой счет</string>
    <string name="action_save">Save</string>
    <string name="add">Добавить</string>
    <string name="add_card">Добавить карту</string>
    <string name="add_perm_code">Добавить постоянный код</string>
    <string name="add_sub_sputnik">Подключить «Спутник-1»</string>
    <string name="add_temp_code">Добавить временный код</string>
    <string name="add_widget">Add widget</string>
    <string name="adress">Адрес:</string>
    <string name="all_done_fr">Всё готово!</string>
    <string name="already_download">Уже скачивается</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apartment_number">Номер квартиры</string>
    <string name="app_name">Наш дом</string>
    <string name="app_name_splash">Наш дом</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_access_title">Доступ к видеоархиву</string>
    <string name="archive_date_from">Дата с</string>
    <string name="archive_date_from_hint">ДД.ММ.ГГГГ</string>
    <string name="archive_date_to">Дата по</string>
    <string name="archive_request">Здравствуйте! Нужен архив с %1$s по %2$s.</string>
    <string name="archive_request_complete_button">Перейти к запросу</string>
    <string name="archive_request_complete_notice">Скоро специалист службы поддержки свяжется с вами.</string>
    <string name="archive_request_complete_title">Запрос на видео отправлен!</string>
    <string name="archive_time_from">Время с</string>
    <string name="archive_time_from_hint">00:00</string>
    <string name="archive_time_to">Время по</string>
    <string name="auth_account_not_found">No such account found</string>
    <string name="auth_account_not_found_error">User account not found</string>
    <string name="auth_action_try_again">Try again</string>
    <string name="auth_allow_access_dialog_message">You can\'t sign in with no access to this information: we\'ll send you back to the start</string>
    <string name="auth_allow_access_dialog_negative_action">Deny</string>
    <string name="auth_allow_access_dialog_positive_action">Allow</string>
    <string name="auth_allow_access_dialog_title">Access required to sign in</string>
    <string name="auth_allow_access_negative_action">Deny</string>
    <string name="auth_allow_access_positive_action">Allow</string>
    <string name="auth_allow_access_subtitle">The %s app is requesting access: \n</string>
    <string name="auth_allow_access_title">Allow access to the information</string>
    <string name="auth_bindind_esia_waiting_title">Waiting for a response from Gosuslugi</string>
    <string name="auth_bindind_sber_id_waiting_title">Waiting for response from Sberbank</string>
    <string name="auth_bindind_social_account_waiting_action">Try again</string>
    <string name="auth_bindind_social_account_waiting_subtitle">Если ничего не происходит, попробуйте ещё</string>
    <string name="auth_change_email_confirmation_dialog_accept">Yes, change</string>
    <string name="auth_change_email_confirmation_dialog_decline">Don`t</string>
    <string name="auth_change_email_confirmation_dialog_text">You might need your phone and access to your current email address</string>
    <string name="auth_change_email_confirmation_dialog_title">Change the email address?</string>
    <string name="auth_change_email_success_button">OK</string>
    <string name="auth_change_email_success_text_add">Now you can use it for signing in to your account and access recovery. \nReceipts and important notifications about your account will be sent to this email address.</string>
    <string name="auth_change_email_success_text_add_marketing">Now you can use it for signing in to your account and access recovery. \n \nReceipts and important notifications about your account as well as news and promotions will be sent to this email address.</string>
    <string name="auth_change_email_success_text_changed">Use it for signing in to your account and access recovery. \n \nNotifications (if enabled) and receipts will be sent to the new email address.</string>
    <string name="auth_change_email_success_title_add">Done! New email added: %s</string>
    <string name="auth_change_email_success_title_change">Done! New email linked: %s</string>
    <string name="auth_change_password_confirmation_dialog_accept">Yes, change</string>
    <string name="auth_change_password_confirmation_dialog_decline">No</string>
    <string name="auth_change_password_confirmation_dialog_text">After changing your password, you\'ll need to sign in to your account again: on all devices</string>
    <string name="auth_change_password_confirmation_dialog_title">Change password</string>
    <string name="auth_change_password_finish_button">Sign in to your account</string>
    <string name="auth_change_password_finish_text">Now you need to sign in to your account again, using the new password this time</string>
    <string name="auth_change_password_finish_title">Done! Password changed</string>
    <string name="auth_change_password_success_button">OK</string>
    <string name="auth_change_password_success_text">Done! Account password changed</string>
    <string name="auth_change_phone_confirmation_dialog_accept">Yes, change</string>
    <string name="auth_change_phone_confirmation_dialog_decline">No</string>
    <string name="auth_change_phone_confirmation_dialog_text">First, we\'ll send a text message containing a code to the current number. You\'ll need to enter it at the next step</string>
    <string name="auth_change_phone_confirmation_dialog_title">Change phone number?</string>
    <string name="auth_change_phone_success_button">OK</string>
    <string name="auth_change_phone_success_text">You can use it to sign in to your account. Text message codes for confirming transactions will also be sent to this phone number.</string>
    <string name="auth_passport_profile_email">Email address</string>
    <string name="auth_passport_profile_email_change">Change the email address</string>
    <string name="auth_passport_profile_name">Name</string>
    <string name="auth_passport_profile_name_change">Add</string>
    <string name="auth_passport_profile_password">Password</string>
    <string name="auth_passport_profile_password_change">Change password</string>
    <string name="auth_passport_profile_personal_data">Personal information</string>
    <string name="auth_passport_profile_phone">Phone number</string>
    <string name="auth_passport_profile_phone_change">Add phone number</string>
    <string name="auth_passport_profile_security">Security</string>
    <string name="auth_passport_profile_social_accounts_title">Other accounts</string>
    <string name="auth_wait_confirmation_content">Looks like you\'ve already tried to get or enter the code: now a pause is required.</string>
    <string name="auth_wait_confirmation_ok">OK</string>
    <string name="auth_wait_confirmation_title">Please wait</string>
    <string name="auth_yandex_acquire_registration_faq">Q&amp;A</string>
    <string name="auth_yandex_acquire_registration_ok">Create a new account</string>
    <string name="auth_yandex_acquire_registration_screen_title">No such account found</string>
    <string name="auth_yandex_acquire_registration_support">Contact the Support Service</string>
    <string name="auth_yandex_acquire_registration_text">Try signing in using a different email address or create a new account.</string>
    <string name="btn_no_cancel_payment">Не отключать автоплатёж</string>
    <string name="cancel_auto_payment_header">Расскажите нам, почему решили отменить автоматическую оплату</string>
    <string name="cancel_auto_payment_title">Отмена автоплатежа</string>
    <string name="cancel_payment">Отключить</string>
    <string name="continue_button">Продолжить</string>
    <string name="dialog_survey_question_make_like">Поставить оценку</string>
    <string name="dialog_survey_question_message">Привет! Мы раздаем доступ к истории посещений за ваш честный отзыв.  Как вам наше приложение? Все хорошо? </string>
    <string name="dialog_survey_question_no">Нет</string>
    <string name="dialog_survey_question_yes">Да</string>
    <string name="other_reason_hint">Текст причины</string>
    <string name="other_reason_title">Укажите причину</string>
    <string name="partner_service">Услуга добавлена обслуживающей домофон компанией. Откроется внешняя ссылка</string>
    <string name="partner_title">Партнер</string>
    <string name="rb_no_confident">Нет уверенности в наличии средств</string>
    <string name="rb_no_error">Подключён по ошибке</string>
    <string name="rb_no_other_reason">Другая причина</string>
    <string name="rb_no_props">Не вижу выгоды от автоплатежа</string>
    <string name="settings_about_company">О компании</string>
</resources>