<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_cancel_auto_payment_0"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/cancel_auto_payment_title"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/padding_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/header"
                android:padding="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_auto_payment_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextView.Body3"/>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">
                <RadioButton
                    android:theme="@style/RadioButtonPayments"
                    android:textColor="@drawable/btn_radio_color_list"
                    android:id="@+id/rb_no_props"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_no_props"/>
                <RadioButton
                    android:theme="@style/RadioButtonPayments"
                    android:textColor="@drawable/btn_radio_color_list"
                    android:id="@+id/rb_no_confident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_no_confident"/>
                <RadioButton
                    android:theme="@style/RadioButtonPayments"
                    android:textColor="@drawable/btn_radio_color_list"
                    android:id="@+id/rb_no_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_no_error"/>
                <RadioButton
                    android:theme="@style/RadioButtonPayments"
                    android:textColor="@drawable/btn_radio_color_list"
                    android:id="@+id/rb_no_other_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rb_no_other_reason"/>
            </RadioGroup>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/l_other_reason"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btn_no_cancel"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintVertical_chainStyle="spread_inside">
                <TextView
                    android:textStyle="bold"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_reason_title"
                    android:paddingHorizontal="0dp"
                    style="@style/TextView.Body2"/>
                <EditText
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="start|top"
                    android:id="@+id/et_reason"
                    android:background="@drawable/bg_comment"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingTop="@dimen/margin_small"
                    android:paddingRight="@dimen/padding_default"
                    android:paddingBottom="@dimen/margin_small"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_reason_hint"
                    android:minLines="3"
                    android:paddingHorizontal="@dimen/padding_default"
                    android:paddingVertical="@dimen/margin_small"
                    android:importantForAutofill="no"/>
            </LinearLayout>
            <Button
                android:enabled="true"
                android:textColor="@color/white"
                android:id="@+id/btn_no_cancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_no_cancel_payment"
                android:textAllCaps="false"
                android:backgroundTint="@drawable/blue_button"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/l_other_reason"/>
            <Button
                android:enabled="true"
                android:textColor="@color/track_gray"
                android:id="@+id/btn_cancel"
                android:background="@drawable/bg_red_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_payment"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
