<?xml version="1.0" encoding="utf-8"?>
<ru.yoomoney.sdk.gui.widget.StateFlipViewGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stateFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inAnimation="@anim/fade_in"
    android:outAnimation="@anim/fade_out"
    android:animateFirstView="false">
    <FrameLayout
        android:id="@+id/content_container"
        android:background="?attr/colorBgTint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ru.yoomoney.sdk.auth.ui.TopBarDefault
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ru.yoomoney.sdk.auth.ui.EmptyStateLargeView
            android:id="@+id/waiting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:ym_state_action="@string/auth_bindind_social_account_waiting_action"
            app:ym_state_icon="@drawable/ic_pending_m"
            app:ym_state_subtitle="@string/auth_bindind_social_account_waiting_subtitle"
            app:ym_state_title="@string/auth_bindind_sber_id_waiting_title"/>
    </FrameLayout>
    <View
        android:id="@+id/empty_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</ru.yoomoney.sdk.gui.widget.StateFlipViewGroup>
