<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ru.yoomoney.sdk.auth.ui.TopBarDefault
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ru.yoomoney.sdk.gui.widget.text.TextTitle1View
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_yandex_acquire_registration_screen_title"
        android:layout_marginStart="@dimen/ym_spaceM"
        android:layout_marginEnd="@dimen/ym_spaceM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"/>
    <ru.yoomoney.sdk.gui.widget.text.TextBodyView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ym_spaceM"
        android:text="@string/auth_yandex_acquire_registration_text"
        android:layout_marginStart="@dimen/ym_spaceM"
        android:layout_marginEnd="@dimen/ym_spaceM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        style="@style/Text.Body.Secondary"/>
    <ru.yoomoney.sdk.gui.widgetV2.list.item_action.ItemActionView
        android:id="@+id/faq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ym_spaceM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:ym_title="@string/auth_yandex_acquire_registration_faq"/>
    <ru.yoomoney.sdk.gui.widgetV2.list.item_action.ItemActionView
        android:id="@+id/contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq"
        app:ym_title="@string/auth_yandex_acquire_registration_support"/>
    <ru.yoomoney.sdk.auth.ui.PrimaryButtonView
        android:id="@+id/actionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ym_spaceM"
        android:layout_marginStart="@dimen/ym_spaceM"
        android:layout_marginEnd="@dimen/ym_spaceM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:ym_text="@string/auth_yandex_acquire_registration_ok"/>
</androidx.constraintlayout.widget.ConstraintLayout>
