<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/button_rounded_white"
        android:padding="@dimen/padding_default"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/sputnik_blue"
            android:id="@+id/dialogTitle"
            android:background="@drawable/bg_sub_service_badge"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner_title"
            style="@style/TextView.Body2"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:id="@+id/dialogNotice"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner_service"
            android:fontFamily="@font/opensans_regular"
            android:textAlignment="gravity"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/sputnik_blue"
            android:gravity="start"
            android:id="@+id/parther_about"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about_company"
            android:fontFamily="@font/opensans_regular"
            android:textAlignment="gravity"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/btn_continue"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/continue_button"
            style="@style/Button.BlueButton"/>
    </LinearLayout>
</LinearLayout>
