<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_survey_question_message"
                style="@style/TextView.Body2"/>
            <View
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                style="@style/main_divider_style"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/layoutButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/sputnik_blue"
                    android:id="@+id/btnDoesntLike"
                    android:layout_width="wrap_content"
                    android:text="@string/dialog_survey_question_no"
                    android:layout_weight="1"
                    style="@style/Button.TransparentButton"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/white"
                    android:id="@+id/btnLike"
                    android:layout_width="wrap_content"
                    android:text="@string/dialog_survey_question_yes"
                    android:layout_weight="1"
                    style="@style/Button.BlueButton"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:textColor="@color/white"
                android:id="@+id/btnOpenStore"
                android:text="@string/dialog_survey_question_make_like"
                style="@style/Button.BlueButton"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
